<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ComplexLoginActivity"
        android:fillViewport="true"
        android:id="@+id/scroll_view"
        android:scrollbars="none">
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activities.ComplexLoginActivity"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView
                android:id="@+id/instagram_image"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/main_logo"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/email_input"
                style="@style/login_input"
                android:layout_marginTop="40dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instagram_image" />

        <EditText
                android:id="@+id/password_input"
                style="@style/login_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_input" />

        <Button
                android:id="@+id/login_btn"
                style="@style/login_btn"
                android:text="@string/SignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input" />
        <Button
                android:id="@+id/phone_login_btn"
                style="@style/phone_login_btn"
                android:text="@string/SignInWithPhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_btn" />

        <TextView android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/SignUp"
                android:gravity="center"
                android:background="@drawable/top_border_grey"
                android:id="@+id/create_account_text"
                />
    </android.support.constraint.ConstraintLayout>
</ScrollView>